# dusk

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile.v2-fork-api  Dockerfile.v2-fork-rpc  Dockerfile.v2-fork-rpc-proxy  LICENSE  README.md  V2_ARCHITECTURE_PLAN.md  V2_NAMING_POLISH_PLAN.md  V2_PR_BODY.md  V2_PR_REVIEW_GUIDE.md  V2_USER_FLOW_CHARTS.md  package-lock.json  package.json
.github/workflows/: anchor-buffer.yaml  ci.yaml  release-build.yaml
poc/: repeat_top18_virtual_flashloan_poc.mjs
programs/dusk/: Cargo.toml  README.md  RELEASE_CHECKLIST.md  SIGNOFF_CHECKLIST.md
programs/faucet/: Cargo.toml
programs/leverage_delegate/: Cargo.toml
programs/leverage_delegate/src/: lib.rs
programs/omnipair/: Cargo.toml
programs/omnipair-v2/: CORE_INVARIANT_SIGNOFF.md  Cargo.toml  DEPLOYMENT_SIGNOFF.md  INCIDENT_RESPONSE.md  INTEGRATION_SIGNOFF.md  README.md  RELEASE_CHECKLIST.md  RISK_PARAMETER_SIGNOFF.md  SECURITY_REVIEW_SIGNOFF.md  SIGNOFF_CHECKLIST.md  SIMULATION_SIGNOFF.md
railway/: v2-fork-api.json  v2-rpc-proxy.json  v2-surfpool-rpc.json
scripts/: README.md  check_repo_hygiene.js  devnet_leverage_e2e.ts  generate_irc_upgrade_txs.ts  surfpool_leverage_e2e.ts
scripts/protocol-tests/: README.md  catalog.ts  harness.ts  run.ts  run_fresh.ts  tsconfig.json  types.ts
scripts/v2-fork-lab/: README.md  api.ts  api_core.ts  rpc_proxy.ts  start_surfpool.sh  surfpool_v2_e2e.ts  surfpool_v2_e2e_runner.ts  test_leverage.mjs  (+1 more)
tests/: README.md  basic.test.ts  futarchy.test.ts  v2-final-smoke.test.ts
verifiable-builds/: README.md
(+247 files in other folders)
